Upgraded to Java 24